--- a/ios_lottostat/_ui/LTAppBar/LTAppBar.xib
+++ b/ios_lottostat/_ui/LTAppBar/LTAppBar.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -37,7 +36,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBrownColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="Xao-c1-zeu" secondAttribute="bottom" constant="5" id="987-wE-xLZ"/>
                 <constraint firstItem="qnD-gF-xwU" firstAttribute="leading" secondItem="Xao-c1-zeu" secondAttribute="trailing" id="CwE-Xy-Qsk"/>
@@ -63,8 +62,5 @@
     <resources>
         <image name="ic_back" width="24" height="24"/>
         <image name="ic_more" width="24" height="24"/>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
