--- a/ios_lottostat/Controller/MyLotto/ItemMyLottoNumber.xib
+++ b/ios_lottostat/Controller/MyLotto/ItemMyLottoNumber.xib
@@ -131,6 +131,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="tintColor" systemColor="tintColor"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="hZs-Kn-lbt" secondAttribute="trailing" constant="8" id="3j5-tx-bfE"/>
                 <constraint firstAttribute="bottom" secondItem="hZs-Kn-lbt" secondAttribute="bottom" constant="8" id="4GQ-Ps-bpM"/>
@@ -158,6 +159,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
